[package]
name = "prop_tune"
version = "0.1.1"
edition = "2021"
description = "A crate to simplify work with Propositional Statements."
license = "MIT"
repository = "https://github.com/emilHof/prop_tune"
documentation = "https://github.com/emilHof/prop_tune"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prop_tune_core = { version="0.1.0", path = "../prop_tune_core"}
prop_tune_macro = { version="0.1.0", path = "../prop_tune_macro"}
