[package]
name = "prop_tune_core"
version = "0.1.3"
edition = "2021"
description = "A crate to simplify work with Propositional Statements."
license = "MIT"
repository = "https://github.com/emilHof/prop_tune"
documentation = "https://github.com/emilHof/prop_tune"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
