[package]
name = "prop_tune_macro"
version = "0.1.0"
edition = "2021"
description = "A crate to simplify work with Propositional Statements."
license = "MIT"
repository = "https://github.com/emilHof/prop_tune"
documentation = "https://github.com/emilHof/prop_tune"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
prop_tune_core = {path = "../prop_tune_core"}
syn = { version = "*", features = ["extra-traits"] }
quote = "*"
proc-macro2 = "*"
