[package]
name = "prop_tune_macro"
version = "0.1.0"
edition = "2021"
description = "The procedural macro crate for proc_tune"
license = "MIT"
repository = "https://github.com/emilHof/prop_tune"
documentation = "https://github.com/emilHof/prop_tune"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
prop_tune_core = { version = "0.1.0", path = "../prop_tune_core" }
syn = { version = "*", features = ["extra-traits"] }
quote = "*"
proc-macro2 = "*"
