[package]
name = "prop_tune_macro"
version = "0.2.0"
edition = "2021"
description = "The procedural macro crate for proc_tune"
license = "MIT"
repository = "https://github.com/emilHof/prop_tune"
documentation = "https://github.com/emilHof/prop_tune"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
prop_tune_core = { version = "0.2" }
